# object_detect_interfaces

./: README.md
object_detect_interfaces/: CMakeLists.txt  package.xml
object_detect_msgs/: CMakeLists.txt  package.xml
object_detect_msgs/msg/: ObjectInfo2D.msg  ObjectInfo2DArray.msg  ObjectInfo3D.msg  ObjectInfo3DArray.msg
object_detect_srvs/: CMakeLists.txt  package.xml
object_detect_srvs/srv/: SetClasses.srv  SetPredict.srv
